Aligned the random recipe page and fixed some size issues when resizing the page

--- a/src/components/recipes/DisplayRecipe/index.module.scss
+++ b/src/components/recipes/DisplayRecipe/index.module.scss
@@ -1,3 +1,5 @@
 .displayContainer {
-    outline: solid 1px red;
+    // outline: solid 1px red;
+    // max-width: 60%;
+
 }
